--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
-   
-  
+
+
 
 
 </head>
 
+         <!--Jumbotron-->
 <div class="container mt-4 mb-4">
 
     <body>
@@ -41,7 +42,7 @@
                         <div class="col-md-12 text-center">
 
                             <h1 class="display-4">WELCOME TO THE UK TUBE</h1>
-                            
+
 
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Icon_train_UK.svg/225px-Icon_train_UK.svg.png"
                                 class="mx-auto d-block" alt="Cinque Terre">
@@ -55,7 +56,7 @@
             </div>
         </div>
 
-
+        <!--Table where train info is shown-->
         <table class="table table-dark" id='customer-table'>
             <thead>
                 <tr>
@@ -67,13 +68,12 @@
                 </tr>
             </thead>
             <tbody>
-               
+
                 </tr>
             </tbody>
         </table>
 
-
-
+        <!--Form to add Train -->
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
